@@ -35,11 +35,13 @@
 #include <QTextStream>
 #include <QSocketNotifier>
 
+#include <qwebpage.h>
+
 QT_BEGIN_NAMESPACE
 class QUrl;
 class QFile;
 QT_END_NAMESPACE
-class QWebPage;
+
 class QWebFrame;
 
 class LayoutTestController;
@@ -48,6 +50,41 @@ class TextInputController;
 class GCController;
 
 namespace WebCore {
+
+class DumpRenderTree;
+
+class WebPage : public QWebPage {
+    Q_OBJECT
+public:
+    WebPage(QWidget *parent, DumpRenderTree *drt);
+
+    QWebPage *createWindow(QWebPage::WebWindowType);
+
+    void javaScriptAlert(QWebFrame *frame, const QString& message);
+    void javaScriptConsoleMessage(const QString& message, int lineNumber, const QString& sourceID);
+    bool javaScriptConfirm(QWebFrame *frame, const QString& msg);
+    bool javaScriptPrompt(QWebFrame *frame, const QString& msg, const QString& defaultValue, QString* result);
+
+    void resetSettings();
+    void enableTextOutput(bool enable) { m_enableTextOutput = enable; }
+
+public slots:
+    bool shouldInterruptJavaScript() { return false; }
+
+protected:
+    bool acceptNavigationRequest(QWebFrame* frame, const QNetworkRequest& request, NavigationType type);
+
+private slots:
+    void setViewGeometry(const QRect &r)
+    {
+        QWidget *v = view();
+        if (v)
+            v->setGeometry(r);
+    }
+private:
+    DumpRenderTree *m_drt;
+    bool m_enableTextOutput;
+};
 
 class DumpRenderTree : public QObject {
 Q_OBJECT
@@ -74,7 +111,7 @@ public:
     QWebPage *createWindow();
     int windowCount() const;
 
-    QWebPage *webPage() const { return m_page; }
+    WebPage *webPage() const { return m_page; }
 
 
 #if defined(Q_WS_X11)
@@ -101,7 +138,7 @@ private:
     bool m_dumpPixels;
     QString m_expectedHash;
 
-    QWebPage *m_page;
+    WebPage *m_page;
 
     EventSender *m_eventSender;
     TextInputController *m_textInputController;
